[package]
name = "meow-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.57"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.34", features = ["bundled"] }
pty-process = { version = "0.5", features = ["async"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
url = "2"
base64 = "0.22"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
